# heimdal

./: .gitignore  .travis.yml  ChangeLog  LICENSE  Makefile.am  NEWS  NTMakefile  README  README.fast  README.md  SECURITY.md  TODO  adbpush.sh  appveyor.yml  autogen.sh  buildheimdal_native.sh  buildheimdal_target.sh  config.guess  config.sub  configure.ac  configure.in
admin/: Makefile.am  NTMakefile  add.c  change.c  copy.c  destroy.c  get.c  ktutil-commands.in  ktutil.1  ktutil.8  ktutil.c  list.c  purge.c  remove.c  rename.c
appl/: Makefile.am
appl/afsutil/: ChangeLog  afslog.1  afslog.c  pagsh.1  pagsh.c
appl/dbutils/: bsearch.1  bsearch.c
appl/dceutils/: dpagaix.c  k5dce.h  k5dcecon.c  testpag.c
appl/ftp/: ChangeLog
appl/ftp/common/: Makefile.am
appl/ftp/ftp/: Makefile.am  cmds.c  cmdtab.c  ftp.c  gssapi.c  main.c  security.c
appl/ftp/ftpd/: Makefile.am  ftpcmd.y  ftpd.c  ftpd_locl.h  gss_userok.c  kauth.c  logwtmp.c  ls.c
appl/gssmask/: Makefile.am  common.c  common.h  gssmaestro.c  gssmask.c  protocol.h
appl/kf/: kf.1  kf.c  kfd.8  kfd.c
appl/kx/: ChangeLog  common.c  krb5.c  kx.1  kx.c  kxd.8  kxd.c  rxtelnet.1  rxterm.1  tenletxr.1
appl/login/: Makefile.am  conf.c  env.c  limits_conf.c  login.1  login.access.5  login.c  login_locl.h
appl/otp/: Makefile.am  otp.1  otp.c  otpprint.1  otpprint.c
appl/popper/: Makefile.am  pop_auth.h  pop_debug.c  pop_dropcopy.c  pop_init.c  pop_pass.c  pop_send.c  pop_updt.c  popper.8
appl/push/: Makefile.am  pfrom.1  push.c
appl/rcp/: Makefile.am  rcp.1  rcp.c
appl/rsh/: ChangeLog  Makefile.am  common.c  rsh.1  rsh.c  rsh_locl.h  rshd.8  rshd.c
appl/su/: Makefile.am  su.1  su.c
appl/telnet/: ChangeLog
appl/telnet/libtelnet/: Makefile.am  auth.c  encrypt.c  kerberos5.c
appl/telnet/telnet/: Makefile.am  telnet.1  telnet.c
appl/telnet/telnetd/: Makefile.am  sys_term.c  telnetd.c  utility.c
appl/test/: Makefile.am  auditdns.c  common.c  gss_common.c  gssapi_client.c  gssapi_server.c  http_client.c  jgssapi_server.java  nt_gss_client.c  nt_gss_common.c  nt_gss_server.c  tcp_client.c  tcp_server.c  test_locl.h  uu_client.c  uu_server.c
appl/xnlock/: xnlock.c
base/: Makefile.am  NTMakefile  array.c  baselocl.h  bsearch.c  data.c  db.c  dict.c  error.c  heimbase.c  heimbase.h  heimbasepriv.h  json.c  roken_rename.h  string.c  test_base.c  version-script.map
cf/: ChangeLog  Makefile.am.common  ax_prog_cc_for_build.m4  broken-realloc.m4  check-compile-et.m4  check-getpwnam_r-posix.m4  check-symbols.sh  check-x.m4  crypto.m4  db.m4  dispatch.m4  framework-corefoundation.m4  krb-prog-perl.m4  krb-struct-winsize.m4  krb-version.m4  make-proto.pl  maybe-valgrind.sh  ntlm-ess.m4  otp.m4  pthreads.m4  resolv.m4  roken-frag.m4  roken-h-process.pl  sunos.m4  telnet.m4  test-package.m4  valgrind-suppressions  w32-check-exported-symbols.pl  w32-def-from-dll.pl  w32-list-externs-from-objs.pl  wflags.m4  win32.m4
debian/: changelog  control  copyright  docs  heimdal.init  info  rules
doc/: Makefile.am  NTMakefile  ack.texi  apps.texi  base.din  copyright.texi  doxytmpl.dxy  heimdal.texi  hx509.texi  (+5 more)
lib/base/: Makefile.am  NTMakefile  array.c  baselocl.h  bsearch.c  common_plugin.h  config_file.c  config_reg.c  context.c  data.c  db.c  dict.c  dll.c  error.c  error_string.c  expand_path.c  heim_err.et  heimbase-atomics.h  heimbase-svc.h  heimbase.c  heimbase.h  heimbasepriv.h  json.c  log.c  number.c  plugin.c  string.c  test_base.c  version-script.map  version-script.mapin  warn.c
lib/hcrypto/: Makefile.am  NTMakefile  aes.c  aes.h  bn.c  bn.h  camellia-ntt.c  camellia-ntt.h  camellia.c  camellia.h  common.c  des.c  des.h  destest.c  dh-ltm.c  dh-tfm.c  dh.c  dh.h  dsa.c  dsa.h  ec.c  ec.h  ecdh.h  ecdsa.h  engine.c  engine.h  evp-aes-cts.c  evp-cc.c  evp-cc.h  evp-crypt.c  evp-hcrypto.c  evp-hcrypto.h  evp-openssl.c  evp-openssl.h  evp-pkcs11.c  evp-w32.c  evp-wincng.c  evp.c  evp.h  example_evp_cipher.c  (+53 more)
lib/hcrypto/imath/: imath.c
lib/hcrypto/libtommath/: NTMakefile  bn_error.c  bn_mp_find_prime.c  bn_mp_isprime.c  bn_mp_mod.c  bn_mp_prime_next_prime.c  bn_mp_rand.c  bn_mp_shrink.c  bn_s_mp_montgomery_reduce_fast.c  bn_s_mp_rand_platform.c  tommath.h  tommath.tex  tommath_class.h
lib/hcrypto/libtommath/demo/: demo.c
lib/hcrypto/libtommath/etc/: 2kprime.c  drprime.c  mersenne.c  mont.c  pprime.c  timer.asm  tune.c
lib/hcrypto/libtommath/logs/: README
lib/hcrypto/libtommath/mtest/: mpi.c  mtest.c
lib/hcrypto/libtommath/pics/: makefile
lib/hcrypto/tomsfastmath/: NTMakefile  RELEASE  changes.txt  gen.pl  genlist.sh  makefile  makefile.shared  parsenames.pl  tfm.tex  updatemakes.sh
lib/hcrypto/tomsfastmath/demo/: rsa.c  stest.c  test.c
lib/hcrypto/tomsfastmath/mtest/: mtest.c
lib/hcrypto/tomsfastmath/src/addsub/: fp_add.c  fp_add_d.c  fp_addmod.c  fp_cmp.c  fp_cmp_d.c  fp_cmp_mag.c  fp_sub.c  fp_sub_d.c  fp_submod.c  s_fp_add.c  s_fp_sub.c
lib/hcrypto/tomsfastmath/src/bit/: fp_cnt_lsb.c  fp_count_bits.c  fp_div_2.c  fp_div_2d.c  fp_lshd.c  fp_mod_2d.c  fp_rshd.c
lib/hcrypto/tomsfastmath/src/divide/: fp_div.c  fp_div_d.c  fp_mod.c  fp_mod_d.c
lib/hcrypto/tomsfastmath/src/exptmod/: fp_2expt.c  fp_exptmod.c
lib/hcrypto/tomsfastmath/src/generators/: comba_mult_gen.c  comba_mult_smallgen.c  comba_sqr_gen.c  comba_sqr_smallgen.c
lib/hcrypto/tomsfastmath/src/headers/: tfm.h
lib/hcrypto/tomsfastmath/src/misc/: fp_ident.c  fp_set.c
lib/hcrypto/tomsfastmath/src/mont/: fp_montgomery_calc_normalization.c  fp_montgomery_reduce.c  fp_montgomery_setup.c
lib/hcrypto/tomsfastmath/src/mul/: fp_mul.c  fp_mul_2.c  fp_mul_2d.c  fp_mul_d.c  fp_mulmod.c
lib/hcrypto/tomsfastmath/src/numtheory/: fp_find_prime.c  fp_gcd.c  fp_invmod.c  fp_isprime.c  fp_lcm.c  fp_prime_miller_rabin.c  fp_prime_random_ex.c
lib/hcrypto/tomsfastmath/src/sqr/: fp_sqr.c  fp_sqr_comba.c  fp_sqrmod.c
lib/hcrypto/x25519/: NTMakefile  x25519_ref10.c
lib/ipc/: Makefile.am  client.c  common.c  heim-ipc.h  hi_locl.h  server.c  tc.c  ts-http.c  ts.c
lib/sqlite/: Makefile.am  NTMakefile  sqlite3.c  version-script.map
(+1439 files in other folders)
